tests/fsharp/core/sigs/neg45.bsl

neg45.fs(12,5): error FS0685: The generic function 'Foo' must be given explicit type argument(s)

neg45.fs(14,5): error FS0685: The generic function 'Foo' must be given explicit type argument(s)

neg45.fs(23,5): error FS0685: The generic function 'Foo' must be given explicit type argument(s)

neg45.fs(25,5): error FS0685: The generic function 'Foo' must be given explicit type argument(s)

neg45.fs(34,25): error FS0465: Type inference problem too complicated (maximum iteration depth reached). Consider adding further type annotations.

neg45.fs(34,25): error FS0465: Type inference problem too complicated (maximum iteration depth reached). Consider adding further type annotations.

neg45.fs(41,23): error FS0827: This is not a valid name for an active pattern

neg45.fs(52,14): error FS0039: The field, constructor or member 'Foo' is not defined

neg45.fs(56,16): error FS0827: This is not a valid name for an active pattern

neg45.fs(72,26): error FS0001: A type parameter is missing a constraint 'when 'T :> System.IComparable'

neg45.fs(72,10): error FS0035: This construct is deprecated: This type abbreviation has one or more declared type parameters that do not appear in the type being abbreviated. Type abbreviations must use all declared type parameters in the type being abbreviated. Consider removing one or more type parameters, or use a concrete type definition that wraps an underlying type, such as 'type C<'a> = C of ...'.

neg45.fs(73,36): error FS0001: A type parameter is missing a constraint 'when 'T :> System.IComparable'

neg45.fs(73,36): error FS0193: A type parameter is missing a constraint 'when 'T :> System.IComparable'

neg45.fs(73,20): error FS0340: The signature and implementation are not compatible because the declaration of the type parameter 'T' requires a constraint of the form 'T :> System.IComparable

neg45.fs(74,42): error FS0001: A type parameter is missing a constraint 'when 'T :> System.IComparable'

neg45.fs(75,41): error FS0001: A type parameter is missing a constraint 'when 'T :> System.IComparable'

neg45.fs(76,35): error FS0001: A type parameter is missing a constraint 'when 'T :> System.IComparable'

neg45.fs(77,30): error FS0001: A type parameter is missing a constraint 'when 'T :> System.IComparable'

neg45.fs(77,30): error FS0193: A type parameter is missing a constraint 'when 'T :> System.IComparable'

neg45.fs(77,20): error FS0340: The signature and implementation are not compatible because the declaration of the type parameter 'T' requires a constraint of the form 'T :> System.IComparable

neg45.fs(78,38): error FS0001: A type parameter is missing a constraint 'when 'T :> System.IComparable'

neg45.fs(79,28): error FS0193: A type parameter is missing a constraint 'when 'T :> System.IComparable'

neg45.fs(79,20): error FS0340: The signature and implementation are not compatible because the declaration of the type parameter 'T' requires a constraint of the form 'T :> System.IComparable

neg45.fs(79,20): error FS0340: The signature and implementation are not compatible because the declaration of the type parameter 'T' requires a constraint of the form 'T :> System.IComparable

neg45.fs(80,28): error FS0193: A type parameter is missing a constraint 'when 'T :> System.IComparable'

neg45.fs(80,20): error FS0340: The signature and implementation are not compatible because the declaration of the type parameter 'T' requires a constraint of the form 'T :> System.IComparable

neg45.fs(80,20): error FS0340: The signature and implementation are not compatible because the declaration of the type parameter 'T' requires a constraint of the form 'T :> System.IComparable

neg45.fs(81,35): error FS0001: A type parameter is missing a constraint 'when 'T :> System.IComparable'

neg45.fs(89,26): error FS0041: A unique overload for method 'M' could not be determined based on type information prior to this program point. The available overloads are shown below (or in the Error List window). A type annotation may be needed.
Possible overload: 'member D.M : 'a -> 'b'.
Possible overload: 'member D.M : 'a -> 'b'.

neg45.fs(97,26): error FS0041: A unique overload for method 'M' could not be determined based on type information prior to this program point. The available overloads are shown below (or in the Error List window). A type annotation may be needed.
Possible overload: 'member D.M : 'a -> 'b'.
Possible overload: 'member D.M : 'a -> 'b'.

neg45.fs(104,26): error FS0041: A unique overload for method 'M' could not be determined based on type information prior to this program point. The available overloads are shown below (or in the Error List window). A type annotation may be needed.
Possible overload: 'member D.M : 'a -> 'b'.
Possible overload: 'member D.M : 'a -> 'b'.

neg45.fs(105,24): error FS0025: Incomplete pattern matches on this expression. For example, the value '0' may indicate a case not covered by the pattern(s).

neg45.fs(113,53): error FS0040: This and other recursive references to the object(s) being defined will be checked for initialization-soundness at runtime through the use of a delayed reference. This is because you are defining one or more recursive objects, rather than recursive functions. This warning may be suppressed by using '#nowarn "40"' or '--nowarn:40'.
